clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: domain-0-le-prod

spec:
  ingressClassName: internal
  tls:
    - hosts:
        - longhorn.${DOMAIN_0}
      secretName: longhorn-tls

  rules:
    - host: longhorn.${DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
